--- a/app/assets/lang/en_US.toml
+++ b/app/assets/lang/en_US.toml
@@ -1,174 +1,174 @@
 [ejs.landing]
-updateAvailableTooltip = "Update Available"
-usernamePlaceholder = "Username"
-usernameEditButton = "Edit"
-settingsTooltip = "Settings"
-serverStatus = "SERVER"
-serverStatusPlaceholder = "OFFLINE"
-mojangStatus = "MOJANG STATUS"
+updateAvailableTooltip = "Mise a jours disponible"
+usernamePlaceholder = "Pseudonyme"
+usernameEditButton = "Modifier"
+settingsTooltip = "Paramètres"
+serverStatus = "Serveur"
+serverStatusPlaceholder = "Hors-Ligne"
+mojangStatus = "Status de Mojang"
 mojangStatusTooltipTitle = "Services"
 mojangStatusNETitle = "Non&nbsp;Essential"
-newsButton = "NEWS"
-launchButton = "PLAY"
-launchButtonPlaceholder = "&#8226; No Server Selected"
-launchDetails = "Please wait.."
-newsNavigationStatus = "{currentPage} of {totalPages}"
-newsErrorLoadSpan = "Checking for News.."
-newsErrorFailedSpan = "Failed to Load News"
-newsErrorRetryButton = "Try Again"
-newsErrorNoneSpan = "No News"
+newsButton = "Nouveautées"
+launchButton = "JOUER"
+launchButtonPlaceholder = "&#8226; Pas de serveur selectioné"
+launchDetails = "Chargement.."
+newsNavigationStatus = "{currentPage} de {totalPages}"
+newsErrorLoadSpan = "Actualisation.."
+newsErrorFailedSpan = "Erreur lors de l'actualisation"
+newsErrorRetryButton = "Veuillez réessayer"
+newsErrorNoneSpan = "Pas de nouveautées"
 
 [ejs.login]
-loginCancelText = "Cancel"
+loginCancelText = "Annuler"
 loginSubheader = "MINECRAFT LOGIN"
-loginEmailError = "* Invalid Value"
-loginEmailPlaceholder = "EMAIL OR USERNAME"
-loginPasswordError = "* Required"
-loginPasswordPlaceholder = "PASSWORD"
+loginEmailError = "* Valeur invalide"
+loginEmailPlaceholder = "Pseudonyme ou Adresse @"
+loginPasswordError = "* Obligatoire"
+loginPasswordPlaceholder = "Mots de passe"
 loginForgotPasswordLink = "https://minecraft.net/password/forgot/"
-loginForgotPasswordText = "forgot password?"
-loginRememberMeText = "remember me?"
+loginForgotPasswordText = "Mots de passe oublier?"
+loginRememberMeText = "ce souvenir?"
 loginButtonText = "LOGIN"
 loginNeedAccountLink = "https://minecraft.net/store/minecraft-java-edition/"
-loginNeedAccountText = "Need an Account?"
-loginPasswordDisclaimer1 = "Your password is sent directly to mojang and never stored."
-loginPasswordDisclaimer2 = "{appName} is not affiliated with Mojang AB."
+loginNeedAccountText = "besoin d'un compte?"
+loginPasswordDisclaimer1 = "Votre mot de passe est envoyé directement à Mojang et n'est jamais stocké."
+loginPasswordDisclaimer2 = "{appName} nous somme pas affilié à Mojang AB."
 
 [ejs.loginOptions]
-loginOptionsTitle = "Login Options"
-loginWithMicrosoft = "Login with Microsoft"
-loginWithMojang = "Login with Mojang"
-cancelButton = "Cancel"
+loginOptionsTitle = "Options de connexion"
+loginWithMicrosoft = "connexion avec Microsoft"
+loginWithMojang = "connexion avec Mojang"
+cancelButton = "Annuler"
 
 [ejs.overlay]
-serverSelectHeader = "Available Servers"
-serverSelectConfirm = "Select"
-serverSelectCancel = "Cancel"
-accountSelectHeader = "Select an Account"
-accountSelectConfirm = "Select"
-accountSelectCancel = "Cancel"
+serverSelectHeader = "Serveurs autorisés"
+serverSelectConfirm = "Selectionnez"
+serverSelectCancel = "Annuler"
+accountSelectHeader = "Selectionnez un compte"
+accountSelectConfirm = "Selectionnez"
+accountSelectCancel = "Annuler"
 
 [ejs.settings]
-navHeaderText = "Settings"
-navAccount = "Account"
+navHeaderText = "Paramètres"
+navAccount = "Compte"
 navMinecraft = "Minecraft"
 navMods = "Mods"
 navJava = "Java"
 navLauncher = "Launcher"
-navAbout = "About"
-navUpdates = "Updates"
+navAbout = "A propos"
+navUpdates = "Mise a jours"
 navDone = "Done"
-tabAccountHeaderText = "Account Settings"
-tabAccountHeaderDesc = "Add new accounts or manage existing ones."
+tabAccountHeaderText = "Paramètres du compte"
+tabAccountHeaderDesc = "Ajoutez un nouveau compte ou modifiez-en un."
 microsoftAccount = "Microsoft"
-addMicrosoftAccount = "+ Add Microsoft Account"
+addMicrosoftAccount = "+ Ajoutez un compte Microsoft"
 mojangAccount = "Mojang"
-addMojangAccount = "+ Add Mojang Account"
-minecraftTabHeaderText = "Minecraft Settings"
-minecraftTabHeaderDesc = "Options related to game launch."
-gameResolutionTitle = "Game Resolution"
-launchFullscreenTitle = "Launch in fullscreen."
-autoConnectTitle = "Automatically connect to the server on launch."
-launchDetachedTitle = "Launch game process detached from launcher."
-launchDetachedDesc = "If the game is not detached, closing the launcher will also close the game."
-tabModsHeaderText = "Mod Settings"
-tabModsHeaderDesc = "Enable or disable mods."
-switchServerButton = "Switch"
-requiredMods = "Required Mods"
-optionalMods = "Optional Mods"
-dropinMods = "Drop-in Mods"
-addMods = "Add Mods"
-dropinRefreshNote = "(F5 to Refresh)"
+addMojangAccount = "+ Ajoutez un compte Mojang"
+minecraftTabHeaderText = "Paramètres Minecraft"
+minecraftTabHeaderDesc = "Options liées au lancement du jeu."
+gameResolutionTitle = "Resolution du jeu"
+launchFullscreenTitle = "Lancer en plein écran."
+autoConnectTitle = "Se connecter automatiquement au serveur au lancement."
+launchDetachedTitle = "Lancer le processus du jeu détaché du lanceur."
+launchDetachedDesc = "Si le jeu n'est pas détaché, fermer le lanceur fermera également le jeu."
+tabModsHeaderText = "Paramètres des Mods"
+tabModsHeaderDesc = "Activez/Desactivez un mods."
+switchServerButton = "changer"
+requiredMods = "Mods Obligatoire"
+optionalMods = "Mods Optionel"
+dropinMods = "Glissez-Deposez Mods"
+addMods = "Ajoutez un Mod"
+dropinRefreshNote = "(F5 pour rafraichir)"
 shaderpacks = "Shaderpacks"
-shaderpackDesc = "Enable or disable shaders. Please note, shaders will only run smoothly on powerful setups. You may add custom packs here."
-selectShaderpack = "Select Shaderpack"
-tabJavaHeaderText = "Java Settings"
-tabJavaHeaderDesc = "Manage the Java configuration (advanced)."
-memoryTitle = "Memory"
+shaderpackDesc = "Activer ou désactiver les shaders. Veuillez noter que les shaders ne fonctionneront de manière fluide que sur des machines puissantes. Vous pouvez ajouter des packs personnalisés ici."
+selectShaderpack = "Selectionnez un Shaderpack"
+tabJavaHeaderText = "Paramètres de Java"
+tabJavaHeaderDesc = "Gérer la configuration Java (avancé)."
+memoryTitle = "Memoire (RAM)"
 maxRAM = "Maximum RAM"
 minRAM = "Minimum RAM"
-memoryDesc = "The recommended minimum RAM is 3 gigabytes. Setting the minimum and maximum values to the same value may reduce lag."
+memoryDesc = "La RAM minimale recommandée est de 4 Go. Définir les valeurs minimale et maximale sur la même valeur peut réduire les ralentissements."
 memoryTotalTitle = "Total"
-memoryAvailableTitle = "Available"
-javaExecutableTitle = "Java Executable"
-javaExecSelDialogTitle = "Select Java Executable"
-javaExecSelButtonText = "Choose File"
-javaExecDesc = "The Java executable is validated before game launch."
-javaPathDesc = "The path should end with <strong>{pathSuffix}</strong>."
-jvmOptsTitle = "Additional JVM Options"
-jvmOptsDesc = "Options to be provided to the JVM at runtime. <em>-Xms</em> and <em>-Xmx</em> should not be included."
-launcherTabHeaderText = "Launcher Settings"
-launcherTabHeaderDesc = "Options related to the launcher itself."
-allowPrereleaseTitle = "Allow Pre-Release Updates."
-allowPrereleaseDesc = "Pre-Releases include new features which may have not been fully tested or integrated.<br>This will always be true if you are using a pre-release version."
-dataDirectoryTitle = "Data Directory"
-selectDataDirectory = "Select Data Directory"
-chooseFolder = "Choose Folder"
-dataDirectoryDesc = "All game files and local Java installations will be stored in the data directory.<br>Screenshots and world saves are stored in the instance folder for the corresponding server configuration."
-aboutTabHeaderText = "About"
-aboutTabHeaderDesc = "View information and release notes for the current version."
+memoryAvailableTitle = "Disponible"
+javaExecutableTitle = "Executable Java"
+javaExecSelDialogTitle = "Selectionnez l'executable Java"
+javaExecSelButtonText = "Choisissez un fichier"
+javaExecDesc = "L'exécutable Java est validé avant le lancement du jeu."
+javaPathDesc = "Le chemin doit se terminer par <strong>{pathSuffix}</strong>."
+jvmOptsTitle = "Paramètres Additionel JVM"
+jvmOptsDesc = "Paramètres à fournir à la JVM au moment de l'exécution. <em>-Xms</em> and <em>-Xmx</em> ne doivent pas être inclus."
+launcherTabHeaderText = "Paramètres du Launcher"
+launcherTabHeaderDesc = "Options liées au lanceur lui-même."
+allowPrereleaseTitle = "Permettre les mises à jour de test."
+allowPrereleaseDesc = "Les version test incluent de nouvelles fonctionnalités qui peuvent ne pas avoir été entièrement testées ou intégrées.<br>Cela sera toujours le cas si vous utilisez une version test.."
+dataDirectoryTitle = "Répertoire des données"
+selectDataDirectory = "Selectionnez Répertoire des données"
+chooseFolder = "Choisissez un dossier"
+dataDirectoryDesc = "Tous les fichiers du jeu et les installations locales de Java seront stockés dans le répertoire des données.<br>Les captures d'écran et les sauvegardes de monde sont stockées dans le dossier de l'instance pour la configuration du serveur correspondante.."
+aboutTabHeaderText = "A propos"
+aboutTabHeaderDesc = "Voir les informations et les notes de version pour la version actuelle."
 aboutTitle = "{appName}"
-stableRelease = "Stable Release"
+stableRelease = "Version stable"
 versionText = "Version "
 sourceGithub = "Source (GitHub)"
 support = "Support"
-devToolsConsole = "DevTools Console"
-releaseNotes = "Release Notes"
+devToolsConsole = "Console DevTools"
+releaseNotes = "Notes de version"
 changelog = "Changelog"
-noReleaseNotes = "No Release Notes"
-viewReleaseNotes = "View Release Notes on GitHub"
-launcherUpdatesHeaderText = "Launcher Updates"
-launcherUpdatesHeaderDesc = "Download, install, and review updates for the launcher."
-checkForUpdates = "Check for Updates"
-whatsNew = "What's New"
-updateReleaseNotes = "Update Release Notes"
+noReleaseNotes = "Pas de notes de version"
+viewReleaseNotes = "voir les notes de version sur GitHub"
+launcherUpdatesHeaderText = "Mise a jours du Launcher"
+launcherUpdatesHeaderDesc = "Téléchargez, installez et consultez les mises à jour pour le lanceur."
+checkForUpdates = "Vérifier les mises à jour"
+whatsNew = "Quoi de neuf ?"
+updateReleaseNotes = "Note de la mise a jours de la version"
 
 [ejs.waiting]
-waitingText = "Waiting for Microsoft.."
+waitingText = "En attente de Microsoft.."
 
 [ejs.welcome]
-continueButton = "CONTINUE"
+continueButton = "CONTINUER"
 
 
 [js.discord]
-waiting = "Waiting for Client.."
+waiting = "En attente du Client.."
 state = "Server: {shortId}"
 
 [js.index]
-microsoftLoginTitle = "Microsoft Login"
-microsoftLogoutTitle = "Microsoft Logout"
+microsoftLoginTitle = "Connexion Microsoft"
+microsoftLogoutTitle = "Deconnexion Microsoft"
 
 [js.login]
 login = "LOGIN"
-loggingIn = "LOGGING IN"
-success = "SUCCESS"
-tryAgain = "Try Again"
+loggingIn = "En connexion"
+success = "Connexion reussite"
+tryAgain = "Réessayer"
 
 [js.login.error]
-invalidValue = "* Invalid Value"
-requiredValue = "* Required"
+invalidValue = "* Valeur invalid"
+requiredValue = "* Obligatoire"
 
 [js.login.error.unknown]
-title = "Unknown Error During Login"
-desc = "An unknown error has occurred. Please see the console for details."
+title = "Erreur inconnu durant la connexion"
+desc = "Un erreur inconnu est arriver. Demandez de l'aide a votre administrateur."
 
 [js.landing.launch]
-pleaseWait = "Please wait.."
-failureTitle = "Error During Launch"
-failureText = "See console (CTRL + Shift + i) for more details."
-okay = "Okay"
+pleaseWait = "Attendez s'il vous plaît.."
+failureTitle = "Erreur lors du lanchement"
+failureText = "Regarder la console (CTRL + Shift + i) pour plus de details."
+okay = "Ok"
 
 [js.landing.selectedAccount]
-noAccountSelected = "No Account Selected"
+noAccountSelected = "Aucun compte selectioné"
 
 [js.landing.selectedServer]
-noSelection = "No Server Selected"
-loading = "Loading.."
+noSelection = "Aucun serveur selectioné"
+loading = "Chargement.."
 
 [js.landing.serverStatus]
-server = "SERVER"
-offline = "OFFLINE"
-players = "PLAYERS"
+server = "Serveur"
+offline = "Eteint"
+players = "Joueurs"
 
 [js.landing.systemScan]
 checking = "Checking system info.."
